--- a/metadata/app.json
+++ b/metadata/app.json
@@ -4,7 +4,7 @@
 	"i18n": {
 		"de-DE": {
 			"label": "CSV-Onboarding",
-            "description": "CSV-Onboarding",
+			"description": "CSV-Onboarding",
 			"extended_description": "",
 			"features": [
 				""
@@ -12,7 +12,7 @@
 		},
 		"en-US": {
 			"label": "CSV Onboarding",
-			"description": "CSV Onboarding",
+			"description": "The CSV (comma separated value) Onboarding is a quick and straightforward way to bulk setup large amounts of users. This saves you time from having to setup each user manually.",
 			"extended_description": "",
 			"features": [
 				""
