--- a/.shipyard.yml
+++ b/.shipyard.yml
@@ -1,6 +1,7 @@
 ---
 name: monster-ui-application-csv-onboarding
 base_branch: origin/master
+exposure: private
 metapackage:
   - name: meta-monster-ui
     branch: master
